Overflow-y fix attempt 2

--- a/src/index.css
+++ b/src/index.css
@@ -254,7 +254,7 @@ li{
   p{
     font-size: 12px;
   }
-  body{
+  html, body{
     overflow-y:hidden;
   }
 }
